[gd_scene load_steps=7 format=3 uid="uid://wxcqvavncu0b"]

[ext_resource type="Script" path="res://scenes/main_character/main_character.gd" id="1_dc8iu"]
[ext_resource type="Shader" path="res://scenes/main_character/main_character.gdshader" id="2_uom5o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2tkl1"]
shader = ExtResource("2_uom5o")
shader_parameter/normalized_time = 0.0
shader_parameter/damage_tint = Vector4(1, 0, 0, 1)
shader_parameter/active = false
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_gdlno"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7tr5s"]
gradient = SubResource("Gradient_gdlno")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3evak"]
size = Vector2(64, 64)

[node name="MainCharacter" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_dc8iu")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_2tkl1")
texture = SubResource("GradientTexture2D_7tr5s")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3evak")

[node name="DashCooldownTimer" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]

[node name="SuperAttackTimer" type="Timer" parent="."]

[node name="OnHitFlashTimer" type="Timer" parent="."]

[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="SuperAttackTimer" to="." method="_on_super_attack_timer_timeout"]
